--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
                 <p class="section-name" style="margin-bottom: 3pt; ">News</p>
                 <div class="exp-list">
                     <ul>
+                        <li>&#x2022;&nbsp (2025.06.) 
+                            A paper about Multi-Domain Object Tracking is accepted to <b>IEIE 2024</b>.
+                        </li>
+                        <li>&#x2022;&nbsp (2025.03.) 
+                            I joined <b>MVP Lab</b> as a graduate student pursuing a master's degree at Yonsei University.
+                            (<a href="http://mvp.yonsei.ac.kr/professor/">Prof. Sangyoun Lee</a>)
+                        </li>
                         <li>&#x2022;&nbsp (2024.11.) 
                             A paper about Autonomous path planning is accepted to <b>ICCE 2025 (Oral)</b>.
                         </li>
@@ -116,7 +123,7 @@
         </div>
         <div class="row justify-content-center" id="publications">
             <div class="col-12">
-                <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
+                <p class="section-name" style="margin-bottom: 3pt; ">International</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
             </div>
             <div class="col-12">
@@ -131,29 +138,33 @@
                         <p class="text-muted"><u>Seongjun Choi</u>, Youngbum Kim, Nam Woo Kim, Mansun Shin, Byunggi Chae, Sungjin Lee,
                         </p>
                         <p><em> IEEE 43rd International Conference on Consumer Electronics (ICCE) 2025 (Oral)</em></p>
-                        <p><a href="./data/paper/[KCC2024]NeRF의-깊이-추정-시-뷰디렉션-설정의-중요성-연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
+                        <p><a href="https://ieeexplore.ieee.org/iel8/10929765/10929768/10930062.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/InfoFusionController">Code</a>&nbsp;|&nbsp;
                             <a href="https://drawingprocess.github.io/InfoFusionController">Project Page</a>
                         </p>
                     </div>
-
+                </div>
+            </div>
+            <div class="col-12">
+                <p class="section-name" style="margin-bottom: 3pt; ">Domestic</p>
+                <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
+            </div>
+            <div class="col-12">
+                <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/KSC2024_Non-Glare-NeRF.png" alt="KSC2024_Non-Glare-NeRF" class="img-fluid mx-auto"
+                        <img src="data/paper_thumbnail/IEIE2025_Randconv-Tracking.png" alt="IEIE2025_Randconv-Tracking" class="img-fluid mx-auto"
                             style="width: 90%; height: auto; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
-                        Non-Glare-NeRF: 빛의 반사가 강한 표면에서 깊이 왜곡 완화
-                        <p class="text-muted"><u>Seongjun Choi*</u>, Hyoseok Hwang,
+                        RandConv 기반 도메인 적응으로 강화된 다중 도메인 객체 추적 기술 연구
+                        <p class="text-muted"><u>Seongjun Choi</u>, Seunghoon Lee, Chaewon Park, Inseok Jeon, Sangyoun Lee
                         </p>
-                        <p><em>Korea Software Congress (KSC) 2024</em></p>
-                        <p><a href="./data/paper/[KSC2024]Non-Glare-NeRF.docx.pdf">Paper</a>&nbsp;|&nbsp;
-                            <a href="https://github.com/DrawingProcess/Non-Glare-NeRF">Code</a>&nbsp;|&nbsp;
-                            <a href="https://drawingprocess.github.io/Non-Glare-NeRF">Project Page</a> |&nbsp;
-                            <a href="./data/award/[SWCON2024]Non-Glare-NeRF_최우수상_수상확인서.pdf" style="color: red;">Award</a>
+                        <p><em>The Institute of Electronics and Information Engineers (IEIE) 2025</em></p>
+                        <p><a href="./data/paper/[IEIE2025]Randconv-Tracking.docs.pdf">Paper</a>&nbsp;
                         </p>
                     </div>
-
+                    
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/KSC2024_Codebook-NeRF.png" alt="KSC2024_Codebook-NeRF" class="img-fluid mx-auto"
                             style="width: 90%; height: 130px; display: block;">
@@ -168,6 +179,23 @@
                             <a href="https://github.com/DrawingProcess/Codebook-NeRF">Code</a>&nbsp;|&nbsp;
                             <a href="https://drawingprocess.github.io/Codebook-NeRF">Project Page</a>&nbsp;|&nbsp;
                             <a href="./data/award/[KSC2024]Codebook-NeRF_최우수상_수상확인서.pdf" style="color: red;">Award</a>
+                        </p>
+                    </div>
+
+                    <div class="col-md-4 paper-thumbnail">
+                        <img src="data/paper_thumbnail/KSC2024_Non-Glare-NeRF.png" alt="KSC2024_Non-Glare-NeRF" class="img-fluid mx-auto"
+                            style="width: 90%; height: auto; display: block;">
+                    </div>
+                    <div class="col-md-8 paper-info">
+                        <!-- Paper Title -->
+                        Non-Glare-NeRF: 빛의 반사가 강한 표면에서 깊이 왜곡 완화
+                        <p class="text-muted"><u>Seongjun Choi</u>, Hyoseok Hwang,
+                        </p>
+                        <p><em>Korea Software Congress (KSC) 2024</em></p>
+                        <p><a href="./data/paper/[KSC2024]Non-Glare-NeRF.docx.pdf">Paper</a>&nbsp;|&nbsp;
+                            <a href="https://github.com/DrawingProcess/Non-Glare-NeRF">Code</a>&nbsp;|&nbsp;
+                            <a href="https://drawingprocess.github.io/Non-Glare-NeRF">Project Page</a> |&nbsp;
+                            <a href="./data/award/[SWCON2024]Non-Glare-NeRF_최우수상_수상확인서.pdf" style="color: red;">Award</a>
                         </p>
                     </div>
 
